// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton tests should render loading 1`] = `
.c0 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c0:focus,
.c0:hover {
  border: 1px solid #4C4C4C;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c0 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c0:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: rgba(0,0,0,0.0);
  background: #A1DDBA url(/img/loading.gif) center center no-repeat;
}

.c1:hover {
  color: rgba(0,0,0,0.0);
  background: #11ab51 url(/img/loading.gif) center center no-repeat;
}

<button
  class="c0 c1"
/>
`;

exports[`LoadingButton tests should render non loading 1`] = `
.c0 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c0:focus,
.c0:hover {
  border: 1px solid #4C4C4C;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c0 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c0:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4C4C4C;
  background: #fff;
}

.c1:hover {
  color: #fff;
  background: #11ab51;
}

<button
  class="c0 c1"
/>
`;
